// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editMode tests changes are saved and are reflected on the view screen 1`] = `
<div>
  <div
    class="makeStyles-root-228"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed"
      style="padding-right: 0px;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <button
          aria-label="Menu"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-229 MuiIconButton-colorInherit MuiIconButton-edgeStart"
          tabindex="0"
          title="toggle-file-explorer"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h6
          class="MuiTypography-root makeStyles-title-230 MuiTypography-h6"
          data-testid="filename-titlebar"
        >
          Welcome to Weborg.org
        </h6>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          title="SettingsIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </div>
    </header>
  </div>
  <div
    class="sc-iwsKbI iBjQwZ"
  >
    <div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  This is a headline note
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Headline notes have bulletpoints at the start of a line
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Add a new headline by clicking the blue plus button
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="sc-htpNat jqvjE"
                        data-testid="headline"
                        style="color: black;"
                      >
                        <div
                          class="sc-bxivhb hyokqO"
                        >
                          <div
                            class="sc-ifAKCX cFlEyZ"
                          >
                            <div
                              style="margin-right: 5px;"
                            >
                              <svg
                                height="16px"
                                width="16px"
                              >
                                <circle
                                  cx="50%"
                                  cy="50%"
                                  r="4px"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="sc-EHOje gpjQSe"
                          >
                            <div
                              class="sc-bdVaJa RUnCB"
                            >
                              <span>
                                <span>
                                  new headline
                                </span>
                                 
                              </span>
                            </div>
                            <div>
                              <div
                                class="sc-bdVaJa RUnCB"
                              >
                                <div
                                  class="sc-gzVnrw evZzFN"
                                  style="color: rgb(113, 113, 113);"
                                >
                                  <span>
                                    <span>
                                      new content
                                    </span>
                                     
                                  </span>
                                </div>
                              </div>
                              <div
                                class="sc-bdVaJa RUnCB"
                              >
                                <div
                                  class="sc-gzVnrw evZzFN"
                                  style="color: rgb(113, 113, 113);"
                                >
                                  <span>
                                    <span>
                                      with new line
                                    </span>
                                     
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="sc-bZQynM bJimMM"
                          >
                            <svg
                              height="16"
                              title="dash-collapse"
                              width="16"
                            >
                               
                              <line
                                style="stroke: black; stroke-width: 1.5;"
                                x1="8"
                                x2="16"
                                y1="8"
                                y2="8"
                              />
                               
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-bZQynM bJimMM"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                       
                      <line
                        style="stroke: black; stroke-width: 1.5;"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                       
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  To delete a note go to the edit screen and click the options icon in the upper right corner
                </span>
                 
              </span>
            </div>
            <div />
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  A headline's level determines its parent and children
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          This is a child of the headline above it
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Click on the dash on the right to collapse a headline's children
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Notes don't have to be headlines
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="sc-bdVaJa RUnCB"
                      >
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              They can also be content
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="sc-bdVaJa RUnCB"
                      >
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              - Content text is grey
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="sc-bdVaJa RUnCB"
                      >
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              - Context text cannot have children
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-bZQynM bJimMM"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                       
                      <line
                        style="stroke: black; stroke-width: 1.5;"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                       
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          You can sync your changes with an existing Dropbox account by clicking the options icon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  Want to make a list of tasks?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span>
                        <span>
                          Mark a headline with TODO
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="sc-bdVaJa RUnCB"
                      >
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              Add some details about the task below in the content area
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-bZQynM bJimMM"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                       
                      <line
                        style="stroke: black; stroke-width: 1.5;"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                       
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: green; font-weight: 600;"
                      >
                         
                        DONE
                         
                      </span>
                      <span>
                        <span>
                          When you're done you can mark the task done
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        style="font-weight: bold;"
                      >
                         #[
                        A
                        ] 
                      </span>
                      <span>
                        <span>
                          Have a lot of todo tasks? Give them a priority
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        style="font-weight: bold;"
                      >
                         #[
                        B
                        ] 
                      </span>
                      <span>
                        <span>
                          This task is less important than the one above
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        style="font-weight: bold;"
                      >
                         #[
                        C
                        ] 
                      </span>
                      <span>
                        <span>
                          Priority integrates with Agenda mode, a feature that will be coming soon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  Does Web-org support
                </span>
                 
              </span>
              <span>
                <span
                  style="font-weight: bold;"
                >
                  bold,
                </span>
                 
              </span>
              <span>
                <span
                  style="text-decoration: underline;"
                >
                  underline,
                </span>
                 
              </span>
              <span>
                <span
                  style="font-style: italic;"
                >
                  italic,
                </span>
                 
              </span>
              <span>
                <span>
                  and
                </span>
                 
              </span>
              <span>
                <span
                  style="text-decoration: line-through;"
                >
                  strikethrough text?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-bdVaJa RUnCB"
              >
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      Yes, yes it does
                    </span>
                     
                  </span>
                </div>
              </div>
              <div
                class="sc-bdVaJa RUnCB"
              >
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with * for bold
                    </span>
                     
                  </span>
                </div>
              </div>
              <div
                class="sc-bdVaJa RUnCB"
              >
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with _ for underline
                    </span>
                     
                  </span>
                </div>
              </div>
              <div
                class="sc-bdVaJa RUnCB"
              >
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with / for italic
                    </span>
                     
                  </span>
                </div>
              </div>
              <div
                class="sc-bdVaJa RUnCB"
              >
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with + for strikethrough
                    </span>
                     
                  </span>
                </div>
              </div>
              <div
                class="sc-bdVaJa RUnCB"
              >
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                        
                    </span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Add"
      class="MuiButtonBase-root MuiFab-root MuiFab-primary"
      style="position: fixed; right: 10px; bottom: 10px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          title="Add"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`editMode tests clicking save button does not change original text when making no change 1`] = `
<div>
  <div
    class="makeStyles-root-465"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed"
      style="padding-right: 0px;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <button
          aria-label="Menu"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-466 MuiIconButton-colorInherit MuiIconButton-edgeStart"
          tabindex="0"
          title="toggle-file-explorer"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h6
          class="MuiTypography-root makeStyles-title-467 MuiTypography-h6"
          data-testid="filename-titlebar"
        >
          Welcome to Weborg.org
        </h6>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          title="SettingsIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </div>
    </header>
  </div>
  <div
    class="sc-iwsKbI iBjQwZ"
  >
    <div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  This is a headline note
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Headline notes have bulletpoints at the start of a line
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Add a new headline by clicking the blue plus button
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  Click on a headline to edit it
                </span>
                 
              </span>
            </div>
            <div />
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  To delete a note go to the edit screen and click the options icon in the upper right corner
                </span>
                 
              </span>
            </div>
            <div />
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  A headline's level determines its parent and children
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          This is a child of the headline above it
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Click on the dash on the right to collapse a headline's children
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          Notes don't have to be headlines
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div>
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              They can also be content
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              - Content text is grey
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              - Context text cannot have children
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-bZQynM bJimMM"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                       
                      <line
                        style="stroke: black; stroke-width: 1.5;"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                       
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span>
                        <span>
                          You can sync your changes with an existing Dropbox account by clicking the options icon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  Want to make a list of tasks?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span>
                        <span>
                          Mark a headline with TODO
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div>
                        <div
                          class="sc-gzVnrw evZzFN"
                          style="color: rgb(113, 113, 113);"
                        >
                          <span>
                            <span>
                              Add some details about the task below in the content area
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-bZQynM bJimMM"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                       
                      <line
                        style="stroke: black; stroke-width: 1.5;"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                       
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: green; font-weight: 600;"
                      >
                         
                        DONE
                         
                      </span>
                      <span>
                        <span>
                          When you're done you can mark the task done
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        style="font-weight: bold;"
                      >
                         #[
                        A
                        ] 
                      </span>
                      <span>
                        <span>
                          Have a lot of todo tasks? Give them a priority
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        style="font-weight: bold;"
                      >
                         #[
                        B
                        ] 
                      </span>
                      <span>
                        <span>
                          This task is less important than the one above
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
              <div
                class="sc-htpNat jqvjE"
                data-testid="headline"
                style="color: black;"
              >
                <div
                  class="sc-bxivhb hyokqO"
                >
                  <div
                    class="sc-ifAKCX cFlEyZ"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-EHOje gpjQSe"
                  >
                    <div
                      class="sc-bdVaJa RUnCB"
                    >
                      <span
                        style="color: red; font-weight: 600;"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        style="font-weight: bold;"
                      >
                         #[
                        C
                        ] 
                      </span>
                      <span>
                        <span>
                          Priority integrates with Agenda mode, a feature that will be coming soon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat jqvjE"
        data-testid="headline"
        style="color: black;"
      >
        <div
          class="sc-bxivhb hyokqO"
        >
          <div
            class="sc-ifAKCX cFlEyZ"
          >
            <div
              style="margin-right: 5px;"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-EHOje gpjQSe"
          >
            <div
              class="sc-bdVaJa RUnCB"
            >
              <span>
                <span>
                  Does Web-org support
                </span>
                 
              </span>
              <span>
                <span
                  style="font-weight: bold;"
                >
                  bold,
                </span>
                 
              </span>
              <span>
                <span />
                 
              </span>
              <span>
                <span
                  style="text-decoration: underline;"
                >
                  underline,
                </span>
                 
              </span>
              <span>
                <span />
                 
              </span>
              <span>
                <span
                  style="font-style: italic;"
                >
                  italic,
                </span>
                 
              </span>
              <span>
                <span>
                  and
                </span>
                 
              </span>
              <span>
                <span
                  style="text-decoration: line-through;"
                >
                  strikethrough text?
                </span>
                 
              </span>
              <span>
                <span />
                 
              </span>
            </div>
            <div>
              <div>
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      Yes, yes it does
                    </span>
                     
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with * for bold
                    </span>
                     
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with _ for underline
                    </span>
                     
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with / for italic
                    </span>
                     
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                      - wrap text with + for strikethrough
                    </span>
                     
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="sc-gzVnrw evZzFN"
                  style="color: rgb(113, 113, 113);"
                >
                  <span>
                    <span>
                        
                    </span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bZQynM bJimMM"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
               
              <line
                style="stroke: black; stroke-width: 1.5;"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
               
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Add"
      class="MuiButtonBase-root MuiFab-root MuiFab-primary"
      style="position: fixed; right: 10px; bottom: 10px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          title="Add"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`editMode tests renders 3 editiable fields 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed"
      style="padding-right: 0px;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <button
          aria-label="Menu"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-2 MuiIconButton-colorInherit MuiIconButton-edgeStart"
          tabindex="0"
          title="toggle-file-explorer"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h6
          class="MuiTypography-root makeStyles-title-3 MuiTypography-h6"
          data-testid="filename-titlebar"
        >
          Welcome to Weborg.org
        </h6>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          style="margin-right: 1rem;"
          title="save"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          style="margin-right: 1rem;"
          title="cancel"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          title="SettingsIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </div>
    </header>
  </div>
  <div
    class="sc-iwsKbI iBjQwZ"
  >
    <div>
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-166 MuiFormControl-marginNormal"
          style="width: 90%; margin-right: 5px; margin-left: 5px;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
            data-shrink="true"
            for="headline-level-edit"
          >
            Level
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input"
              id="headline-level-edit"
              type="number"
              value="1"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-166 MuiFormControl-marginNormal"
          style="width: 90%; margin-right: 5px; margin-left: 5px;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
            data-shrink="true"
            for="headline-text-edit"
          >
            Headline
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input"
              id="headline-text-edit"
              type="text"
              value="Click on a headline to edit it"
            />
          </div>
        </div>
      </div>
      <div
        class="makeStyles-selectArea-168"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-167 MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink="true"
          for="state-label-placeholder"
        >
          State
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline"
          style="width: 90%; margin-right: 5px; margin-left: 5px;"
        >
          <div
            class="MuiSelect-root"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              class="MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="select-State"
              role="button"
              tabindex="0"
            >
              <em>
                none
              </em>
            </div>
            <input
              id="todo-state-edit"
              name="State"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-selectArea-168"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-167 MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink="true"
          for="priority-label-placeholder"
        >
          Priority
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline"
          style="width: 90%; margin-right: 5px; margin-left: 5px;"
        >
          <div
            class="MuiSelect-root"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              class="MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="select-Priority"
              role="button"
              tabindex="0"
            >
              <em>
                none
              </em>
            </div>
            <input
              id="priority-edit"
              name="Priority"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-textField-166 MuiFormControl-marginNormal"
          style="width: 90%; margin-right: 5px; margin-left: 5px;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink="false"
            for="section-text-edit"
          >
            Content
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-multiline MuiInput-multiline"
          >
            <textarea
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline MuiInput-inputMultiline"
              id="section-text-edit"
              style="overflow: hidden;"
            />
            <textarea
              aria-hidden="true"
              class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline MuiInput-inputMultiline"
              readonly=""
              style="visibility: hidden; position: absolute; overflow: hidden; height: 0px;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
